--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: nrupsis
 github_username: rupsis
 
 # Build settings
-theme: minima
+theme: architect
 plugins:
   - jekyll-feed
 # Exclude from processing.
