--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Blunder
 email: nrupsis@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Learning Core Blender development the hard way, and teaching it the easy way.
-baseurl: "https://blunder.training/" # the subpath of your site, e.g. /blog
+  Learning Blender Core development the hard way, and teaching it the easy way.
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blunder.training/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: nrupsis
 github_username: rupsis
 
 # Build settings
-theme: architect
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 # Exclude from processing.
